Start/stop apps on ui(draft). Hosted application AppDomain unload on stop.

--- a/src/Inceptum.AppServer.ManagementConsole/Content/css/site.css
+++ b/src/Inceptum.AppServer.ManagementConsole/Content/css/site.css
@@ -200,3 +200,30 @@ ul.queues li{
 }
 
 
+
+
+
+#appGrid td{
+	padding-left:3px;
+}
+#appGrid td.status{
+	padding-left:16px;
+}
+#appGrid td.active{
+	background-image: url("../images/active.png");
+	background-repeat: no-repeat;
+	background-position: left 2px;
+}
+
+#appGrid td.inactive{
+	color:#999;
+	background-image: url("../images/inactive.png");
+	background-repeat: no-repeat;
+	background-position: left 2px;
+}
+
+#appGrid td.pending{
+	background-image: url("../images/pending.png");
+	background-repeat: no-repeat;
+	background-position: left 2px;
+}
