--- a/src/Inceptum.AppServer.Management/Views/Apps.cshtml
+++ b/src/Inceptum.AppServer.Management/Views/Apps.cshtml
@@ -19,6 +19,7 @@
             <div id="navbar-container">
                 <div class="logo"><img src="/images/logo.png" alt="logo"/></div>
                 <ul id="navbar">
+                    <li><a href="/server">Сервер</a></li>           
                     <li class="selected"><a href="/apps">Приложения</a></li>
                     <li><a href="/conf">Конфигурация</a></li>
                 </ul>
