--- a/src/Inceptum.AppServer.Management/Views/Server.cshtml
+++ b/src/Inceptum.AppServer.Management/Views/Server.cshtml
@@ -5,10 +5,10 @@
 <html>
 <head>
     <title>Сервер</title>
-        <link href="/css/reset.css" rel="stylesheet" type="text/css">
-        <link rel="stylesheet" type="text/css" href="/css/site.css">
-    <script src="/js/jquery-1.6.2.min.js" type="text/javascript"></script>
-    <script src="/js/jquery-ui-1.8.14.min.js" type="text/javascript"></script>
+       <link href="/Content/css/reset.css" rel="stylesheet" type="text/css">
+        <link rel="stylesheet" type="text/css" href="/Content/css/site.css">
+        <script src="/Content/js/jquery-1.6.2.min.js" type="text/javascript"> </script>
+        <script src="/Content/js/jquery-ui-1.8.14.min.js" type="text/javascript"> </script>
   
 </head>
 
@@ -16,7 +16,7 @@
 
     <div id="page">
         <div id="navbar-container">
-            <div class="logo"><img src="/images/logo.png" alt="logo"/></div>
+            <div class="logo"><img src="/Content/images/logo.png" alt="logo"/></div>
             <ul id="navbar">
                 <li class="selected"><a href="/server">Сервер</a></li>     
                 <li ><a href="/apps">Приложения</a></li>
