--- a/src/Inceptum.AppServer.Management/Content/css/site.css
+++ b/src/Inceptum.AppServer.Management/Content/css/site.css
@@ -227,3 +227,17 @@ ul.queues li{
 	background-repeat: no-repeat;
 	background-position: left 2px;
 }
+
+
+
+
+
+.CodeMirror .active-line { background: #f0fcff;}
+.CodeMirror .error-line {border: solid 1px #FF6666; background: #FFBBBB;}
+.CodeMirror .error-gutter {color: #CD0A0A; background: #FF6666; border: solid 1px #FF6666; }
+.CodeMirror { border: 1px solid #EEE; }
+.CodeMirror-scroll.smaller { overflow: scroll; width: 900px; height: 500px; }
+.CodeMirror-scroll.fullscreen { display: block; position: absolute; bottom: 0; left: 0; width: 100%; height: 100%; z-index: 900; margin: 0; padding: 0; border: 0px solid #EEE;background: white; opacity: 1; }
+.CodeMirror .CodeMirror-matchingbracket { color: black !important; background: cyan;}
+.CodeMirror-toolbar.fullscreen { position: absolute;display: block;top: 0;left: 0; z-index: 900; margin: 0; padding: 0; border: 0px solid #EEE;background: white; opacity: 1; } 
+.CodeMirror-toolbar.fullscreen .contents { padding: 10px 25px 10px 25px; } 
