--- a/src/Inceptum.AppServer.Management/UI/templates/bundles/bundle.html
+++ b/src/Inceptum.AppServer.Management/UI/templates/bundles/bundle.html
@@ -1,6 +1,5 @@
 <h1><%=bundle.get("id")%></h1>
-<textarea  id="bundleContent" class="bundle"
-           style="overflow:auto;background:#fff; width:100%;height:300px; border:1px #444 solid; "><%=bundle.get("Content")%></textarea>
+<textarea id="bundleContent" rows="20" cols="80" style="min-height: 450px;min-width: 400px;"><%=bundle.get("Content")%></textarea>
 <div style="margin:5px;">
 
 <button type="button" class="button save">Save</button>
