--- a/src/Inceptum.AppServer.Management/UI/templates/configurations/configuration.html
+++ b/src/Inceptum.AppServer.Management/UI/templates/configurations/configuration.html
@@ -1,6 +1,7 @@
-
 <div class="col_33">
-    <ul class="bundles" style="margin:10px;">
+    <h2>Configuration tree</h2>
+    <button type="button" class="button new">New bundle</button>
+    <ul class="bundles">
     </ul>
 </div>
 <div class="col_66">
