--- a/src/Inceptum.AppServer.Management/UI/css/style.css
+++ b/src/Inceptum.AppServer.Management/UI/css/style.css
@@ -182,3 +182,9 @@ html, body {
     padding: 0.5em; margin: 0;
     height: 3em;
 }
+
+/* Custom styles */
+a.delete { color: red; }
+.popup { position: relative;}
+.close { position: absolute;right: 2px;top:-1px;width:20px;height: 20px;display: block;
+    background: transparent url('images/closeicon.png') 4px 4px no-repeat; cursor: pointer; }
