--- a/src/Inceptum.AppServer.Management/UI/templates/configurations/list.html
+++ b/src/Inceptum.AppServer.Management/UI/templates/configurations/list.html
@@ -1,6 +1,10 @@
-<div class="col_33">
+<div class="col_66">
+    <h2>List of available configurations</h2>
     <% _.each(configurations, function(configuration){ %>
-    <p class=""> <a href="#/configurations/<%= configuration.get("name") %>"><%= configuration.get("name") %></a></p>
+    <p class=""> <a class="configuration" href="#/configurations/<%= configuration.get("name") %>"><%= configuration.get("name") %></a>&nbsp;
+        <a href="#" class="delete" data-cfg-id="<%=configuration.get('name')%>">Delete</a>
+    </p>
     <% }); %>
-    <button type="button" class="button" id="update">Update</button>
+    <button type="button" class="button" id="new">Add new</button>
+    <button type="button" class="button" id="update">Refresh</button>
 </div>
