instance configuration and application load logic refactoring

--- a/UiMockUps/js/templates/applicationInstance.html
+++ b/UiMockUps/js/templates/applicationInstance.html
@@ -6,6 +6,8 @@
             <dd><a href="#/applications/<%=model.ApplicationId%>"><%=model.ApplicationId%></a></a></dd>
             <dt>Version</dt>
             <dd><%= model.Version %></dd>
+            <dt>Start on server startup</dt>
+            <dd><%= model.AutoStart %></dd>
             <dt>Actions</dt>
             <dd>
                 <div class="btn-group">
