Some UI improvements. Error reporting, confirmation dialogs etc.

--- a/UiMockUps/js/templates/instanceEdit.html
+++ b/UiMockUps/js/templates/instanceEdit.html
@@ -15,7 +15,7 @@
         <label class="control-label" for="inputVersion">Version</label>
         <div class="controls">
             <select id="inputVersion" placeholder="Version"  name="Version"  value="<%=model.Version%>">
-                <option value="latest">Use latest</option>
+                <option value="">Use latest</option>
             </select>
         </div>
     </div>
