--- a/UiMockUps/js/templates/instancesList.html
+++ b/UiMockUps/js/templates/instancesList.html
@@ -1,3 +1,8 @@
+<div class="alerts" style="height:3em">
+</div>
+
+
+
 <table class="table table-striped table-condensed table-bordered instances">
     <thead>
     <th>Name</th>
