--- a/UiMockUps/js/templates/header.html
+++ b/UiMockUps/js/templates/header.html
@@ -16,7 +16,7 @@
                     <li class="applications"><a href="#applications">Applications</a></li>
                     <!--<li><a href="#">Configuration</a></li>-->
                 </ul>
-                <span class="led pull-right " style="margin-top:8px;"><img title="Heartbeats"  src="/img/led.png"/></span>
+                <span class="led pull-right " data-title="heartbeats" data-placement="bottom" style="margin-top:8px;"><img  src="/img/led.png"/></span>
                 <!--
             <form class="navbar-search pull-right" action="">
               <input type="text" class="search-query span2" placeholder="Search">
