configurations page on UI (not finished)

--- a/UiMockUps/js/templates/header.html
+++ b/UiMockUps/js/templates/header.html
@@ -14,7 +14,7 @@
                 <ul class="nav topMenu">
                     <li class="server"><a href="#"><i class="icon-home icon-white"></i> Server</a></li>
                     <li class="applications"><a href="#applications">Applications</a></li>
-                    <!--<li><a href="#">Configuration</a></li>-->
+                    <li class="configurations"><a href="#configurations">Configuration</a></li>
                 </ul>
                 <span class="led pull-right " data-title="heartbeats" data-placement="bottom" style="margin-top:8px;"><img  src="/img/led.png"/></span>
                 <!--
