--- a/UiMockUps/js/templates/instanceEdit.html
+++ b/UiMockUps/js/templates/instanceEdit.html
@@ -1,3 +1,8 @@
+<div class="page-header">
+    <h3><%=model.Name%>
+    </h3>
+</div>
+
 <form class="form-horizontal">
     <div class="control-group">
         <label class="control-label" for="inputName">Name</label>
@@ -36,9 +41,14 @@
             <label class="checkbox">
                 Start on server startup <input type="checkbox" id="inputAutostart"  name="Autostart" <% if (model.AutoStart) { %>checked<%}%>>
             </label>
+            <div>
+            <a id="submit" class="btn"><i class=" icon-ok"></i> <span>Save</span></a>
+        </div>
         </div>
     </div>
-    <div>
+
+
+    <!--    <div>
         <button type="submit" id="submit" class="btn">Update</button>
-    </div>
+    </div>-->
 </form>
