--- a/UiMockUps/js/templates/bundle.html
+++ b/UiMockUps/js/templates/bundle.html
@@ -35,7 +35,7 @@
         <span class="pull-right">
             <a id="verify" class="btn btn-mini"><i class="icon-align-left"></i> <strong>Format</strong></a>
             <a id="save" class="btn btn-mini"><i class=" icon-ok"></i> <strong>Save</strong></a>
-            <% if(model.Id){%>
+            <% if(model.id){%>
             <a class="btn btn-mini btn-danger"><i class="icon-trash"></i> <strong>Delete</strong></a>
         <% }%>
 
