--- a/UiMockUps/js/templates/configuration/configurationsSideBar.html
+++ b/UiMockUps/js/templates/configuration/configurationsSideBar.html
@@ -2,7 +2,7 @@
     <ul class="nav nav-list">
         <li class="nav-header">Configurations</li>
         <% _.each(model,function(config) { %>
-        <li data-id="<%= config.id %>"><a href="#configurations/<%= config.id %>"><i class="icon-list-alt"></i> <%= config.id %></a></li>
+        <li data-id="<%= config.Name %>"><a href="#configurations/<%= config.Name %>"><i class="icon-list-alt"></i> <%= config.Name %></a></li>
         <% }); %>
     </ul>
 </div>
