--- a/UiMockUps/js/templates/configuration/configuration.html
+++ b/UiMockUps/js/templates/configuration/configuration.html
@@ -11,7 +11,7 @@
         </span>
     </h3>
 </div>
-<%if(model.Name=="appserver"){%>
+<%if(model.Name=="AppServer"){%>
 <div class="alert">
 
     <strong>Warning!</strong> It is application server configuration. Do not edit it if you are not sure.
