warning for appserver config on ui

--- a/src/Inceptum.AppServer.Management/Content/js/templates/configuration/configuration.html
+++ b/src/Inceptum.AppServer.Management/Content/js/templates/configuration/configuration.html
@@ -11,7 +11,7 @@
         </span>
     </h3>
 </div>
-<%if(model.Name=="AppServer"){%>
+<%if(model.Name.toLowerCase()=="appserver"){%>
 <div class="alert">
 
     <strong>Warning!</strong> It is application server configuration. Do not edit it if you are not sure.
