Add Environment property for application instance

--- a/src/Inceptum.AppServer.Management/Content/js/templates/instanceEdit.html
+++ b/src/Inceptum.AppServer.Management/Content/js/templates/instanceEdit.html
@@ -20,6 +20,14 @@
             <% }%>
         </div>
     </div>
+    
+    <div class="control-group">
+        <label class="control-label" for="inputEnvironment">Environment</label>
+        <div class="controls">
+            <input type="text" id="Environment" name="Environment" placeholder="Environment" value="<%=model.Environment%>">
+        </div>
+    </div>    
+
     <div class="control-group">
         <label class="control-label" for="inputVersion">Version</label>
         <div class="controls">
