--- a/src/Inceptum.AppServer.Management/Content/js/templates/instance.html
+++ b/src/Inceptum.AppServer.Management/Content/js/templates/instance.html
@@ -6,6 +6,8 @@
             <dd><a href="#/applications/<%=model.ApplicationId%>"><%=model.ApplicationId%></a></a></dd>
             <dt>Version</dt>
             <dd><%= model.Version %></dd>
+            <dt>Environment</dt>
+            <dd><%= model.Environment %></dd>
             <dt>Start on server startup</dt>
             <dd><%= model.AutoStart %></dd>
             <dt>Actions</dt>
