some minoe ui tuning

--- a/src/Inceptum.AppServer.Management/Content/js/templates/bundle.html
+++ b/src/Inceptum.AppServer.Management/Content/js/templates/bundle.html
@@ -47,10 +47,10 @@
         <% }%>
         <span class="pull-right">
             <div class="btn-group">
-            <a id="preview" class="btn btn-mini" ><i class="icon-align-left"></i> <strong>Preview (Ctrl+P)</strong></a>
-            <a id="fullScreen" class="btn btn-mini"><i class="icon-align-left"></i> <strong>FullScreen (F11)</strong></a>
-            <a id="verify" class="btn btn-mini"><i class="icon-align-left"></i> <strong>Format</strong></a>
-            <a id="save" class="btn btn-mini"><i class=" icon-ok"></i> <strong>Save</strong></a>
+            <a id="preview" class="btn btn-mini" title="Ctrl+P"><i class="icon-eye-open"></i> <strong>Preview</strong></a>
+            <a id="fullScreen" class="btn btn-mini" title="F11"><i class="icon-fullscreen"></i> <strong>Full Screen</strong></a>
+            <a id="verify" class="btn btn-mini" title="Ctrl+F"><i class="icon-align-left"></i> <strong>Format</strong></a>
+            <a id="save" class="btn btn-mini" title="Ctrl+S"><i class=" icon-ok"></i> <strong>Save</strong></a>
 <!--            <% if(model.id){%>
             <a class="btn btn-mini btn-danger"><i class="icon-trash"></i> <strong>Delete</strong></a>
         <% }%>-->
