--- a/src/Inceptum.AppServer.Management/Content/js/templates/bundle.html
+++ b/src/Inceptum.AppServer.Management/Content/js/templates/bundle.html
@@ -1,18 +1,19 @@
 <style>
-    .CodeMirror{
-        border: 1px solid #E1E1E8;
-        -webkit-border-radius: 4px;
-        -moz-border-radius: 4px;
-        border-radius: 4px;
-        line-height: 20px;
-    }
+         .CodeMirror{
+            border: 1px solid #E1E1E8;
+            -webkit-border-radius: 4px;
+            -moz-border-radius: 4px;
+            border-radius: 4px;
+            line-height: 20px;
+             height:600px;
+        }
 
-    .CodeMirror-scroll {
-        height: 600px;/*auto;*/
-        overflow-y: hidden;
-        overflow-x: auto;
-    }
-
+/*        .CodeMirror-scroll {
+            height: 600px;
+            overflow-y: hidden;
+            overflow-x: auto;
+        }
+  */
     .CodeMirror-fullscreen {
         display: block;
         position: absolute;
@@ -74,7 +75,7 @@
     Name:<input type="text" id="inputName" name="Name" value="<%=model.Name%>" >
 <% }%>
 
-<textarea id="code" name="Content"><%=model.PureContent%></textarea>
+<textarea id="code" name="Content" ><%=model.PureContent%></textarea>
         <br>
 
 
