disable cahcing in headers for rest api; appserver version in header

--- a/src/Inceptum.AppServer.Management/Content/js/templates/header.html
+++ b/src/Inceptum.AppServer.Management/Content/js/templates/header.html
@@ -25,4 +25,8 @@
             </div>
         </div>
     </div>
+    <div style="position: absolute;top:5px;right:5px">
+        <%= model.Version %>
+    </div>
+
 </div>
