--- a/src/Inceptum.AppServer.Management/Content/js/templates/instancesList.html
+++ b/src/Inceptum.AppServer.Management/Content/js/templates/instancesList.html
@@ -4,6 +4,7 @@
     <th>Application</th>
     <th>Version</th>
     <th width="80px">Status</th>
+    <th width="60px"></th>
     <th width="100px"></th>
     </thead>
     <tbody>
